<resources>
    <string name="app_name">Brunch</string>
    <string name="article_title">我的\n标题</string>
    <string name="label_by">by</string>
    <string name="brunch_recommand">Brunch\n推荐</string>
    <string name="article_content">最近项目要开发一个新版本，发现项目中许多布局大致都相同改动不大，并且布局中代码量非常之多不好阅读，针对项目相关内容进行了封装。实现思路：通过继承RelativeLayout实现动态添加所需要的控件，TextView ImageView View 一共封装了8个控件 leftImg reightImg leftTv rightTv centerTv leftTopTv leftBottomTv bottomLine 根据需要动态添加AddView(View) 通过LayoutParams.addRule()设置控件的位置，LayoutParams.setMargins()设置大小进行所需控件的控制实现以下效果：</string>
    <string name="app_name_brunch">brunch</string>
    <string name="label_editor_pick">editor\'s pick\n编辑推荐</string>
    <string name="current_ranking">Current HOT</string>
    <string name="label_title">我是标题</string>
    <string name="label_theme">我是主题</string>
    <string name="label_author">by </string>
    <string name="brunch_rec">Brunch recommaned</string>
    <string name="brunch_slogan">You can make anything\nby writing</string>
    <string name="brunch_slogan_author">- C.S.Lewis -</string>
    <string name="label_start_brunch">Start brunch</string>
    <string name="label_author_apply">Author apply</string>
    <string name="label_input_search_text">请输入搜索内容</string>
    <string name="label_article">文章</string>
    <string name="label_keyword">关键字</string>
    <string name="label_magazine">杂志</string>
    <string name="label_authors">作家</string>
    <string name="label_login">账号登陆</string>
    <string name="string_please_input_email">Please input your email address</string>
    <string name="string_please_input_password">Please input your password</string>
    <string name="string_register_new_account">Do not have an account?</string>
</resources>
