<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/pure_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="14dp"
                android:src="@mipmap/icon_back" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/label_input_search_text"
                android:padding="10dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="16dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="bottom"
            android:background="@color/transBlack" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <FrameLayout
        android:id="@+id/fl_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/pure_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_article"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:background="@color/link_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_keyword"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:background="@color/link_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_magazine"
                android:textColor="#666666"
                android:textSize="12dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:background="@color/link_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_authors"
                android:textColor="#666666"
                android:textSize="12dp" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
