<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/pure_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="14dp"
                android:src="@mipmap/icon_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/label_login"
                android:textColor="#333333"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_check"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:src="@mipmap/icon_check" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="bottom"
            android:background="@color/transBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@color/pure_white"
            android:padding="4dp">

            <ImageView
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:padding="12dp"
                android:src="@mipmap/icon_email" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/string_please_input_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="4dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@color/pure_white"
            android:padding="4dp">

            <ImageView
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:padding="12dp"
                android:src="@mipmap/icon_lock" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/string_please_input_password"
                android:inputType="textPassword"
                android:paddingLeft="4dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ensure_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@color/pure_white"
            android:padding="4dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:padding="12dp"
                android:src="@mipmap/icon_lock" />

            <EditText
                android:id="@+id/et_repassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/string_please_input_password"
                android:inputType="textPassword"
                android:paddingLeft="4dp"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/go_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_register_new_account"
            android:textColor="#666666"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>
